--- a/index.html
+++ b/index.html
@@ -11,31 +11,39 @@
         <div class="card-body">
 
           <h5 class="card-title"><b>Contect Us</b></h5>
+          <form action="submit.html" method="get">
           <!-- first name and last name-->
-          <label style="margin-right: 8rem;" for="">First Name</label>
-          <label for="Last Name">Last Name</label>
-          <br>
-          <input  class="border" style="margin-right: 1rem;"type="text">
-          <input class="border"  type="text">
-          <br>
-          <!-- email bar-->
-              <label for="Email" class="mt-3">Email address</label>
-              <br>
-              <input class="form-control" type="email">
-              <!-- Query bar-->
-              <label style="margin-top: 20px;">Query Type</label><br>
-                <div >
-                 <!-- 1-->
-               <div class="form-check form-check-inline" >
-                <input class="border" class="form-check-input" type="checkbox" id="inlineCheckbox1"  value="option1" style="margin-top: 26px; margin-left: 3px; ">
-                <label class="form-check-label" for="inlineCheckbox1" style="margin-top: 20px;">General Enquiry</label>
+                      <div class="row mb-3">
+              <div class="col">
+                <label for="firstName" class="form-label">First Name</label>
+                <input class="form-control" type="text" id="firstName" name="firstName" required>
               </div>
-               <!-- 2-->
-              <div class="form-check form-check-inline" style="border: 2px solid rgb(222, 217, 217);padding: 5px;border-radius: 4px;">
-                <input class="border" class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2" style="margin-left: 1px;">
-                <label class="form-check-label">Support Request</label>
+              <div class="col">
+                <label for="lastName" class="form-label">Last Name</label>
+                <input class="form-control" type="text" id="lastName" name="lastName" required>
               </div>
             </div>
+          
+          <!-- email bar-->
+              <label for="Email" class="mt-3" required>Email address</label>
+              <br>
+              <input class="form-control" type="email" required>
+              <!-- Query bar-->
+              <label style="margin-top: 20px;">Query Type</label><br>
+              <div class="row mb-3">
+                <div class="col">
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="generalEnquiry" name="queryType" value="General Enquiry" required>
+                    <label class="form-check-label" for="generalEnquiry">General Enquiry</label>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="supportRequest" name="queryType" value="Support Request">
+                    <label class="form-check-label" for="supportRequest">Support Request</label>
+                  </div>
+                </div>
+              </div>
               <!-- Message bar-->
               <div style="margin-top: 20px;">
                 Message
@@ -43,16 +51,17 @@
               </div>
                <!-- check -->
             <div style="margin-top: 10px;">  
-                <input class="form-check-input" type="checkbox" value="checkbox" id="flexCheckIndeterminate">
+                <input class="form-check-input" type="checkbox" required value="checkbox" id="flexCheckIndeterminate">
                 <label class="form-check-label" for="flexCheckIndeterminate" >
                    I Consent to being contacted by the team
                 </label>
             </div>
             <!-- button-->
             <div class="d-grid gap-2">
-                <button class="btn btn-success" type="button" style="margin-top:10px;">Submit</button>
+               <button class="btn btn-success" type="submit" style="margin-top:10px;">Submit</button>
             </div>
       </div>
+      </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
